--- a/src/app/modules/guide/pages/guide-home/guide-home.component.html
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.html
@@ -9,7 +9,7 @@
 
                     </div>
                     <div class="col-7 guide-name m-auto">
-                        <b>{{user.name}}</b>
+                        <b>{{user.name | titlecase}}</b>
                     </div>
                 </div>
                 <div class="row">
@@ -22,7 +22,7 @@
                             <a class="nav-link mb-2 py-3" id="v-pills-deals-tab" data-toggle="pill" [routerLink]="['deals']" routerLinkActive="active" role="tab" aria-controls="v-pills-deals" aria-selected="false">Your Deals</a>
                             <a class="nav-link mb-2 py-3" id="v-pills-profile-tab" data-toggle="pill" [routerLink]="['editProfile']" routerLinkActive="active" role="tab" aria-controls="v-pills-profile" aria-selected="false">Edit Profile</a>
                             <a class="nav-link mb-2 py-3" id="v-pills-changepwd-tab" data-toggle="pill" [routerLink]="['changepassword']" routerLinkActive="active" role="tab" aria-controls="v-pills-changepwd" aria-selected="false">Change Password</a>
-                            <a class="nav-link mb-2 py-3" id="v-pills-profile-tab" data-toggle="pill" role="tab" (click)="logout()" aria-controls="v-pills-profile" aria-selected="false">Logout</a>
+                            <a class="nav-link mb-2 py-3" id="v-pills-profile-tab" data-toggle="pill" role="tab" (click)="logout()" routerLinkActive="active" aria-controls="v-pills-profile" aria-selected="false">Logout</a>
                         </div>
                     </div>
                 </div>
