--- a/src/app/shared/components/about/about.component.html
+++ b/src/app/shared/components/about/about.component.html
@@ -1,4 +1,4 @@
-<mdb-card style="background-image: url('https://mdbootstrap.com/img/Photos/Others/gradient1.jpg')">
+<mdb-card style="background-image: url('https://mdbootstrap.com/img/Photos/Others/gradient1.jpg'); background-repeat: no-repeat; background-size: cover;">
   <div class="text-white text-center py-5 px-4">
     <div>
       <img class="img-fluid card-title pt-3 mb-5 font-bold" src="../../../../assets/images/areoplane white.png" alt="">
@@ -12,7 +12,7 @@
 
 <div class="text-center py-5 px-4">
   <div>
-    <h2 class="card-title h1-responsive pt-3 mb-4 font-bold"><strong>Meet Your developers</strong></h2>
+    <h2 class="card-title h1-responsive pt-3 mb-4 font-bold"><strong>Meet Our Developers</strong></h2>
     <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>The Decoits 3.0</strong></h2>
     <p>We are a bunch of nerds from Earth C-137 who are mad about the product we develop. Focused on finding a solution that actually works and can be applied to the industry right off the bat. Rigorous Brainstorming before taking any decision forward, making an app with a detailed thought behind every user experience are some of our general practices.
     </p>
