--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,10 +4,8 @@
 @import '~mdbootstrap/css/bootstrap.css';
 @import '~mdbootstrap/css/mdb.min.css';
 @import '~bootstrap/dist/css/bootstrap.min.css';
-// @import "~@mobiscroll/angular/dist/css/mobiscroll.scss";
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap');
-// @import "scss/style";
 html,
 body {
     height: 100%;
@@ -21,7 +19,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-    width: 4px;
+    width: 6px;
 }
 
 @media(max-width: 767px) {
@@ -44,14 +42,14 @@ body {
 
  ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
-    border-radius: 10px;
-    background: #64b5f6;
+    border-radius: 0px;
+    background: #553d67;
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
 
  ::-webkit-scrollbar-thumb:window-inactive {
-    background-color: #64b5f6;
+    background-color: #553d67;
 }
 
 .navbar {
@@ -71,7 +69,9 @@ body {
     width: 100%;
     align-items: center;
 }
-
+.card {
+    position: initial;
+}
 
 /* input error */
 
