--- a/src/app/modules/home/home-carousel/home-carousel.component.html
+++ b/src/app/modules/home/home-carousel/home-carousel.component.html
@@ -22,7 +22,7 @@
         </div>
       </div>
       <!-- //// -->
-      <p>First text</p>
+      <p class="textStyle">Platform to join enthusiastic tourists and experienced guides!</p>
     </div>
   </mdb-carousel-item>
   <mdb-carousel-item>
@@ -46,7 +46,7 @@
           </ul>
         </div>
       </div>
-      <p>Secondary text</p>
+      <p class="textStyle">All You have to do is Signup and you are good to go!</p>
     </div>
   </mdb-carousel-item>
   <mdb-carousel-item>
@@ -70,7 +70,7 @@
           </ul>
         </div>
       </div>
-      <p>Third text</p>
+      <p class="textStyle">Enjoy your travel and explore new places with our guides!</p>
     </div>
   </mdb-carousel-item>
 </mdb-carousel>
