--- a/src/app/modules/tourists/components/histories/histories.component.html
+++ b/src/app/modules/tourists/components/histories/histories.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="d-none d-md-block" *ngIf="previousList">
+    <div class="d-none d-md-block" *ngIf="previousList.length > 0 && isData">
         <div class="row mt-3">
             <div class="col-12 text-center">
                 <div class="card sunny-morning-gradient" style="z-index: 100; width: 90%; margin-left: 5%;">
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div *ngIf="!previousList">
+    <div *ngIf="previousList.length <=0 && isData">
         <div class="row cust-grid">
             <div class="col-12 text-center">
                 <img class="img-fluid my-5 h-50 w-25" src="../../../../../assets/images/flamenco-list-is-empty-1.png">
