--- a/src/app/shared/components/change-password/change-password.component.html
+++ b/src/app/shared/components/change-password/change-password.component.html
@@ -63,7 +63,7 @@
 			<div class="features">
 				<h3>Features</h3>
 				<ul>
-					<li>100% Free Signup </li>
+					<li>Totally secure</li>
 					<li>Existing Offers</li>
 					<li>Free 10GB Space</li>
 					<li>Invite Your Friends & Get More Space</li>
