--- a/src/app/shared/components/help-page/help-page.component.html
+++ b/src/app/shared/components/help-page/help-page.component.html
@@ -81,7 +81,7 @@
                 <h4 class="my-3 px-3">Basics</h4>
                 <ul class="c-faqs">
                     <li class="c-faq">
-                        <span class="c-faq__title">Who can become a Withlocals host?</span>
+                        <span class="c-faq__title">Who can become a Voila host?</span>
                         <div class="c-faq__answer">Voila is a platform to enable people share their love for their city and earn through the same. Requirements for our hosts:
                             <ul>
                                 <li>One can be a full-time or part-time guide as per their availibility.</li>
