--- a/src/app/modules/guide/components/bookings/bookings.component.html
+++ b/src/app/modules/guide/components/bookings/bookings.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
     <app-blog></app-blog>
     <!--  -->
-    <div class="d-none d-md-block" *ngIf="bookingsList">
+    <div class="d-none d-md-block" *ngIf="bookingsList.length > 0 && isData">
         <div class="row mt-3">
             <div class="col-12 text-center">
                 <div class="card ripe-malinka-gradient" style="z-index: 100; width: 90%; margin-left: 5%;">
@@ -42,7 +42,7 @@
             </div>
         </div>
     </div>
-    <div *ngIf="!bookingsList">
+    <div *ngIf="bookingsList.length <= 0 && isData">
       <div class="row cust-grid">
           <div class="col-12 text-center">
               <img class="img-fluid my-5 h-50 w-25" src="../../../../../assets/images/cherry-list-is-empty-1.png">
