--- a/src/app/modules/guide/components/bussiness-details/bussiness-details.component.html
+++ b/src/app/modules/guide/components/bussiness-details/bussiness-details.component.html
@@ -8,7 +8,7 @@
               <div class="form-group">
                 <label>People Limit</label>
                 <input type="number" formControlName="peopleLimit" placeholder="Enter people limit" class="form-control">
-                <small class="text-mute">Number of people you can deal with at a time</small>
+                <small class="text-muted">Maximum no of people for which charges per head applied</small>
               </div>
             </div>
             <div class="col-12">
@@ -21,6 +21,7 @@
               <div class="form-group">
                 <label>Charges per Day</label>
                 <input type="number" formControlName="perDayCharge" placeholder="Enter per day charge" class="form-control">
+                <small class="text-muted">Amount will be applied when tourist count exceeds people limit</small>
               </div>
             </div>
         </form>
