--- a/src/app/modules/guide/components/personal-details/personal-details.component.html
+++ b/src/app/modules/guide/components/personal-details/personal-details.component.html
@@ -29,7 +29,7 @@
                 <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>&nbsp;
                 <label for="form5">Email</label>
                 <input type="email" id="form5" formControlName="email" placeholder="Enter email" class="form-control">
-                <small class="text-mute">Your Email should not be already Register</small>
+                <small class="text-muted">Your Email should not be already Registered</small>
 
               </div>
             </div>
@@ -38,23 +38,23 @@
                 <mdb-icon fas icon="phone-alt" class="prefix"></mdb-icon>&nbsp;
                 <label for="form6">Phone number</label>
                 <input type="number" id="form6" formControlName="phoneNumber" placeholder="Enter phone number" class="form-control">
-                <small class="text-mute">Your Number should not be already Register</small>
+                <small class="text-muted">Your Number should not be already Registered</small>
 
               </div>
             </div>
-            <div class="col-sm-6 my-3">
+            <div class="col-12 my-3">
               <div class="form-group">
                 <div class="upload-image">
                   <label class=" control-label upload"  for="filebutton">
                     <mdb-icon fas icon="camera-retro"></mdb-icon>&nbsp;
-                    <span>Upload file<br></span>
+                    <span>Upload Profile Picture<br></span>
                     <input id="filebutton" name="filebutton" #inputFile (change)="onSelectFile($event)" type="file" >
-                    <small class="text-mute">Select a Valid Image File</small>
+                    <!-- <small class="text-muted">Select a Valid Image File</small> -->
                   </label>
                 </div>
               </div>
             </div>
-            <div class="col-sm-6">
+            <div *ngIf="urlArray.length > 0" class="col-sm-6">
               <img  *ngFor="let url of urlArray" [src]="url" width="100%" height="250px" style="padding:10px;"> <br/>
             </div>
             <div class="col-md-6">
@@ -69,6 +69,7 @@
                 <mdb-icon fas icon="key" class="prefix"></mdb-icon>&nbsp;
                 <label for="form4">Confirm Password</label>
                 <input type="password" formControlName="confirmPassword" id="form4" placeholder="Enter confirm password" class="form-control">
+                <small class="text-muted">Confirm password should match with password</small>
               </div>
             </div>
             <div class="col-md-5">
@@ -83,7 +84,7 @@
               <mdb-icon far icon="address-card" class="prefix"></mdb-icon>&nbsp;
               <label for="form4">Aadhar card Number</label>
               <input type="number" id="form4"formControlName="aadhaarNumber" placeholder="Enter Aadhar number" class="form-control">
-              <small class="text-mute">For Admin Verification</small>
+              <small class="text-muted">For Admin Verification</small>
 
             </div>
           </div>
