--- a/src/app/modules/guide/pages/languages/languages.component.html
+++ b/src/app/modules/guide/pages/languages/languages.component.html
@@ -5,6 +5,7 @@
       <h4>Selected 
       </h4>
       <hr>
+      <small class="text-muted">Tap on selected language again to remove it</small>
       <div class="row my-4">
         <div class="col-6 col-md-4 col-lg-3 mb-4" (click)="removeFromSelectedList(item)" *ngFor="let item of selectedLanguageList; let i = index;">
             <mdb-card [ngClass]="getGradientClass(i+1)">
