--- a/src/app/modules/tourists/pages/all-bookings/all-bookings.component.html
+++ b/src/app/modules/tourists/pages/all-bookings/all-bookings.component.html
@@ -1,54 +1,56 @@
 <div class="row all">
 
-    <div class="col-12 p-3" style="position: relative; overflow:hidden;">
+    <div class="col-12 p-3">
         <div class="container-fluid px-1 px-md-5">
-            <div class="card" style="background: linear-gradient(180deg, rgba(255,255,255,0.9671218829328606) 25%, rgba(221,213,226,1) 75%, rgba(202,194,207,1) 99%);">
-                <div class="row  check pb-0 card-body">
-                    <div class="row col-12 col-lg-9 pr-0">
-                        <div class="col-4 col-lg-3 booking text-center">
-                            <a [routerLink]="['now']" routerLinkActive="active">
-                                <h5>
-                                    <mdb-icon far icon="calendar-alt"></mdb-icon> &nbsp; Bookings</h5>
-                            </a>
-                        </div>
-                        <div class="col-4 col-lg-3 request text-center">
-                            <a [routerLink]="['requests']" routerLinkActive="active">
-                                <h5>
-                                    <mdb-icon far icon="address-card"></mdb-icon> &nbsp; Requested</h5>
-                            </a>
-                        </div>
-                        <div class="col-4 col-lg-3 history text-center">
-                            <a [routerLink]="['histories']" routerLinkActive="active">
-                                <h5>
-                                    <mdb-icon fas icon="history"></mdb-icon> &nbsp; Previous</h5>
-                            </a>
+            <div class="card cardHeight" style="background: linear-gradient(180deg, rgba(255,255,255,0.9671218829328606) 25%, rgba(221,213,226,1) 75%, rgba(202,194,207,1) 99%);">
+                <div class="card-body">
+                    <div class="row  check pb-0">
+                        <div class="row col-12 col-lg-9 pr-0">
+                            <div class="col-4 col-lg-3 booking text-center">
+                                <a [routerLink]="['now']" routerLinkActive="active">
+                                    <h5>
+                                        <mdb-icon far icon="calendar-alt"></mdb-icon> &nbsp; Bookings</h5>
+                                </a>
+                            </div>
+                            <div class="col-4 col-lg-3 request text-center">
+                                <a [routerLink]="['requests']" routerLinkActive="active">
+                                    <h5>
+                                        <mdb-icon far icon="address-card"></mdb-icon> &nbsp; Requested</h5>
+                                </a>
+                            </div>
+                            <div class="col-4 col-lg-3 history text-center">
+                                <a [routerLink]="['histories']" routerLinkActive="active">
+                                    <h5>
+                                        <mdb-icon fas icon="history"></mdb-icon> &nbsp; Previous</h5>
+                                </a>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <!-- <hr class="card-body mt-0"> -->
-                <div class="row card-body pt-2">
-                    <div class="col-12 col-lg-9 px-1">
-                        <router-outlet></router-outlet>
-                    </div>
-                    <div class="col-3 mt-5 d-none d-lg-block ">
-                        <div class="card side-text">
-                            <div class="card-body">
-                                <div>
-                                    <h5>Bookings with Voila</h5>
+                    <!-- <hr class="card-body mt-0"> -->
+                    <div class="row pt-2">
+                        <div class="col-12 col-lg-9 px-1">
+                            <router-outlet></router-outlet>
+                        </div>
+                        <div class="col-3 mt-5 d-none d-lg-block ">
+                            <div class="card side-text">
+                                <div class="card-body">
+                                    <div>
+                                        <h5>Bookings with Voila</h5>
+                                    </div>
+                                    <div>
+                                        <mdb-icon fas icon="check"></mdb-icon> &nbsp;Easy Cancellation</div>
+                                    <div>
+                                        <mdb-icon fas icon="check"></mdb-icon>&nbsp; Chat Feature</div>
+                                    <div>
+                                        <mdb-icon fas icon="check"></mdb-icon>&nbsp; Save for later</div>
+                                    <div>
+                                        <mdb-icon fas icon="check"></mdb-icon>&nbsp; Verified Guides</div>
+                                    <div>
+                                        <mdb-icon fas icon="check"></mdb-icon>&nbsp; Personalize Trips</div>
+                                    <div>
+                                        <mdb-icon fas icon="check"></mdb-icon>&nbsp; Safe and Secured</div>
+    
                                 </div>
-                                <div>
-                                    <mdb-icon fas icon="check"></mdb-icon> &nbsp;Easy Cancellation</div>
-                                <div>
-                                    <mdb-icon fas icon="check"></mdb-icon>&nbsp; Chat Feature</div>
-                                <div>
-                                    <mdb-icon fas icon="check"></mdb-icon>&nbsp; Save for later</div>
-                                <div>
-                                    <mdb-icon fas icon="check"></mdb-icon>&nbsp; Verified Guides</div>
-                                <div>
-                                    <mdb-icon fas icon="check"></mdb-icon>&nbsp; Personalize Trips</div>
-                                <div>
-                                    <mdb-icon fas icon="check"></mdb-icon>&nbsp; Safe and Secured</div>
-
                             </div>
                         </div>
                     </div>
