de[poloy bug solved

--- a/src/app/modules/tourists/components/bookings/bookings.component.html
+++ b/src/app/modules/tourists/components/bookings/bookings.component.html
@@ -44,7 +44,7 @@
         </div>
     </div>
 
-    <div *ngIf="bookingsList <= 0 && isData">
+    <div *ngIf="bookingsList.length <= 0 && isData">
         <div class="row cust-grid">
             <div class="col-12 text-center">
                 <img class="img-fluid my-5 h-50 w-25" src="../../../../../assets/images/cherry-list-is-empty-1.png">
