--- a/src/app/modules/guide/components/create-deal/create-deal.component.scss
+++ b/src/app/modules/guide/components/create-deal/create-deal.component.scss
@@ -6,7 +6,7 @@
 
 }
 .bg{
-  height:100vh;
+  min-height:100vh;
   background-image: url(../../../../../assets/images/sylwia-bartyzel-D2K1UZr4vxk-unsplash.jpg);
   background-size: cover;
   background-position: center;
