--- a/src/app/modules/tourists/components/bookings/bookings.component.html
+++ b/src/app/modules/tourists/components/bookings/bookings.component.html
@@ -179,7 +179,7 @@
                 <button mdbBtn class="btn-block waves-light px-1" type="button" size="sm" color="danger" (click)="openCancelRequest(cancel)" mdbWavesEffect>Cancel</button>
             </div>
             <div class="col-4 px-1">
-                <button type="button" mdbBtn color="deep-orange" size="sm" class="btn-block waves-light px-1" *ngIf="selectedBooking.tourType !== 'deal'" (click)="contactGuide(content, selectedBooking?.guideId?.email)" mdbWavesEffect>
+                <button type="button" mdbBtn color="deep-orange" size="sm" class="btn-block waves-light px-1" *ngIf="selectedBooking.tourType !== 'deal'" (click)="contactGuide(content, selectedBooking?.guideId?.email, selectedBooking?.guideId?.name)" mdbWavesEffect>
             Contact&nbsp;<mdb-icon fas icon="headset"></mdb-icon></button>
                 <button type="button" mdbBtn color="deep-orange" *ngIf="selectedBooking.tourType === 'deal'" size="sm" class="btn-block waves-light px-1" (click)="contactTouristRoom(content, selectedBooking.roomDetails._id)" mdbWavesEffect>
              Contact&nbsp;<mdb-icon fas icon="headset"></mdb-icon></button>
