--- a/src/app/modules/tourists/components/edit-profile/edit-profile.component.html
+++ b/src/app/modules/tourists/components/edit-profile/edit-profile.component.html
@@ -31,11 +31,11 @@
 
             </div>
             <div class="row">
-                <div class="col-6 mb-3">
+                <div class="col-12 col-md-6 mb-3">
                     <b style="color: rgba(3, 169, 244, 0.7)">Email </b>
                     <div> {{userData.email}}</div>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <b style="color: rgba(3, 169, 244, 0.7)"> Phone </b>
                     <div> {{userData.phoneNumber}}</div>
                 </div>
